[gd_scene load_steps=15 format=2]

[ext_resource path="res://actor_framework/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://actor_states/Sequence.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor_states/ai_states/WaitTime.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor_states/ai_states/MoveTo.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/wolf/weapons/WolfCharge.tscn" type="PackedScene" id=5]
[ext_resource path="res://actor_states/ai_states/AIAttack.tscn" type="PackedScene" id=6]
[ext_resource path="res://actors/wolf/weapons/WolfJumpBack.tscn" type="PackedScene" id=7]
[ext_resource path="res://actor_states/motion/Stagger.tscn" type="PackedScene" id=8]
[ext_resource path="res://actor_states/motion/Die.tscn" type="PackedScene" id=9]
[ext_resource path="res://actors/wolf/WolfPivot.tscn" type="PackedScene" id=10]
[ext_resource path="res://actors/wolf/Wolf.tres" type="Resource" id=11]
[ext_resource path="res://actors/wolf/particles/WolfDeathExplosion.tscn" type="PackedScene" id=12]
[ext_resource path="res://actors/wolf/WolfStateMachine.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 124.688, 61.3919 )

[node name="Wolf" groups=[
"enemies",
] instance=ExtResource( 1 )]

[node name="Pivot" parent="." index="0" instance=ExtResource( 10 )]

[node name="StateMachine" parent="." index="1"]
script = ExtResource( 13 )
attack_distance = 1200.0
attack_chance = 0.9

[node name="WalkSequence" parent="StateMachine" index="0" instance=ExtResource( 2 )]

[node name="WaitTime" parent="StateMachine/WalkSequence" index="0" instance=ExtResource( 3 )]

[node name="MoveTo" parent="StateMachine/WalkSequence" index="1" instance=ExtResource( 4 )]
max_roam_radius = 200.0
stagger = true

[node name="MotionSteering" parent="StateMachine/WalkSequence/MoveTo/Motion" index="1"]
max_speed = 666.0

[node name="Timer" parent="StateMachine/WalkSequence/MoveTo" index="1"]
wait_time = 0.5

[node name="RunSequence" parent="StateMachine" index="1" instance=ExtResource( 2 )]

[node name="MoveTo" parent="StateMachine/RunSequence" index="0" instance=ExtResource( 4 )]
animation = "run"
max_roam_radius = 0.0
arrive_distance = 900.0

[node name="MotionSteering" parent="StateMachine/RunSequence/MoveTo/Motion" index="1"]
max_speed = 1500.0
mass = 8.0

[node name="Timer" parent="StateMachine/RunSequence/MoveTo" index="1"]
wait_time = 2.0

[node name="JumpBackSequence" parent="StateMachine" index="2" instance=ExtResource( 2 )]

[node name="JumpBack" parent="StateMachine/JumpBackSequence" index="0" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 7 ) ]
stagger = false

[node name="ChargeSequence" parent="StateMachine" index="3" instance=ExtResource( 2 )]
next_state = "JumpBackSequence"

[node name="WaitTime" parent="StateMachine/ChargeSequence" index="0" instance=ExtResource( 3 )]
animation = "growl"
stagger_state = ""
duration = 0.2

[node name="AIAttack" parent="StateMachine/ChargeSequence" index="1" instance=ExtResource( 6 )]
weapon_levels = [ 0 ]
weapons = [ ExtResource( 5 ) ]
stagger = false

[node name="Stagger" parent="StateMachine" index="4" instance=ExtResource( 8 )]
revenge_threshold = 3.0
revenge_state = "JumpBackSequence"

[node name="Die" parent="StateMachine" index="5" instance=ExtResource( 9 )]
die_particles_scene = ExtResource( 12 )

[node name="CollisionBox" parent="." index="2"]
position = Vector2( -3.36357, -62.2723 )
shape = SubResource( 1 )

[node name="Stats" parent="." index="5"]
character_stats = ExtResource( 11 )

[editable path="StateMachine/WalkSequence/MoveTo"]

[editable path="StateMachine/WalkSequence/MoveTo/Motion"]

[editable path="StateMachine/RunSequence/MoveTo"]

[editable path="StateMachine/RunSequence/MoveTo/Motion"]
